--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32718,6 +32718,16 @@ select {
           animation: bounce 1s infinite;
 }
 
+.msg{
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+  width: 100%;
+  margin-bottom: 0;
+  text-align: center;
+  padding: 10px;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
@@ -192182,4 +192192,3 @@ select {
             animation: bounce 1s infinite;
   }
 }
-
